--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,74 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;500;900&display=swap');
 
 html {
-  font-size: 15px;
+  font-size: 93.75%;
   scroll-behavior: smooth;
-    /*  ページ先頭の要素に付ける。戻る位置を調整してくれる。
-        scroll-margin-top: 80px;  */
+  /*  ページ先頭の要素に付ける。戻る位置を調整してくれる。
+      scroll-margin-top: 80px;  */
 }
 
 body {
   font-family: 'Noto Sans JP', sans-serif;
-  font-weight: 400;
+  line-height: 1.7;
+  color: #555;
 }
 
 .container {
-  max-width: 1050px;
-  width: 100%;
+  display: grid;
+  align-content: center;
+  gap: 15px;
+  width: min(100%, 1050px);
   height: 100vh;
   margin: 0 auto;
-  background-color: #eee;
+  padding: 0 15px;
 }
 
+p {
+  display: inline-block;
+  position: relative;
+  margin-left: 20px;
+  font-size: 15px;
+  line-height: 1.2;
+}
+
+p::after {
+  position: absolute;
+  top: 0;
+  left: -20px;
+  content: "\f015";
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900;
+}
+
+/* 間に何を挟んでいてもその存在はないことにして後続の要素に効果をつける */
+/* だから場合によっては、最初の要素に効果がつく。 */
+/* p + p {
+  margin-left: 60px;
+  color: red;
+} */
+
+/* 間に何を挟んでいようが、最初のpを見つけてそれ以降のpには効果をつける */
+/* つまり最初のpだけにしか効果はつかない。 */
+p:not(:first-of-type) {
+  margin-left: 60px;
+  color: red;
+}
+
+/* 同じ挙動 最初以降の要素に対して効果をつける */
+p:nth-of-type(n+2) {
+  margin-left: 60px;
+  color: red;
+}
+
+p:nth-of-type(2)::after {
+  content: "\f002";
+}
+
+p:nth-of-type(3)::after {
+  content: "\f019";
+}
+
+p:nth-of-type(n+4)::after {
+  content: "\f083";
+}
